# kubos

./: .clang-format  .cproject  .dockerignore  .gitignore  .kubos-link.json  .project  .travis.yml  .yotta.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Doxyfile  DoxygenLayout.xml  Jenkinsfile  LICENSE  Linux Overview.md  MSP430-launchpad-guide.md  Makefile  Makefile.base  Makefile.deps  Makefile.include  README.md  STM32F4-discovery-board-guide.md  User_App_on_iOBC.md  Xargo.toml  bootstrap.sh  bsd-3-clause.txt  build_all.sh  changelog.md  circle.yml  cli-installing.md  config.json  contribution-process.md  csp_autoconfig.h.in  deploy.sh  deploy_docs.sh  deploy_tag.sh  (+25 more)
apis/app-api/: Cargo.toml
apis/app-api/python/: README.md  app_api.py  pyproject.toml  requirements.txt  setup.py  test_app_api.py
apis/app-api/rust/: Cargo.toml  README.md
apis/app-api/src/: framework.rs  lib.rs  query.rs  registry.rs
apis/app-api/tests/: registry_test.rs
apis/clyde-3g-eps-api/: Cargo.toml  README.md
apis/clyde-3g-eps-api/examples/: eps.rs  version.rs  watchdog-kicker.rs
apis/clyde-3g-eps-api/src/: eps.rs  lib.rs
apis/gomspace-p31u-api/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  module.json
apis/gomspace-p31u-api/docs/: Doxyfile
apis/gomspace-p31u-api/gomspace-p31u-api/: gomspace-p31u-api.h
apis/gomspace-p31u-api/source/: nanopower.c
apis/gomspace-p31u-api/src/: eps.rs  ffi.rs  lib.rs  object.rs
apis/gomspace-p31u-api/test/: CMakeLists.txt
apis/isis-ants-api/: CMakeLists.txt  Cargo.toml  README.md  build.rs  module.json
apis/isis-ants-api/docs/: Doxyfile
apis/isis-ants-api/examples/: ants.rs
apis/isis-ants-api/isis-ants-api/: ants-api.h
apis/isis-ants-api/source/: ants.c
apis/isis-ants-api/src/: ants.rs  ffi.rs  lib.rs  parse.rs
apis/isis-ants-api/test/: CMakeLists.txt
apis/isis-imtq-api/: CMakeLists.txt  Cargo.toml  README.md  build.rs  module.json
apis/isis-imtq-api/docs/: Doxyfile
apis/isis-imtq-api/imtq-api/: imtq-config.h
apis/isis-imtq-api/isis-imtq-api/: imtq-config.h  imtq-data.h  imtq-ops.h  imtq.h
apis/isis-imtq-api/source/: imtq-config.c  imtq-core.c  imtq-data.c  imtq-ops.c
apis/isis-imtq-api/src/: ffi.rs  imtq.rs  lib.rs
apis/isis-imtq-api/test/: CMakeLists.txt
apis/isis-iobc-supervisor/: CMakeLists.txt  Cargo.toml  README.md  build.rs  module.json
apis/isis-iobc-supervisor/docs/: Doxyfile
apis/isis-iobc-supervisor/isis-iobc-supervisor/: checksum.h  supervisor.h
apis/isis-iobc-supervisor/source/: checksum.c  supervisor.c
apis/isis-iobc-supervisor/src/: ffi.rs  lib.rs
apis/isis-trxvu-api/: CMakeLists.txt  README.md  module.json
apis/isis-trxvu-api/docs/: Doxyfile
apis/isis-trxvu-api/isis-trxvu-api/: trxvu.h
apis/isis-trxvu-api/source/: radio_core.c  radio_rx.c  radio_tx.c
apis/isis-trxvu-api/test/: CMakeLists.txt
apis/mai400-api/: Cargo.toml  README.md
apis/mai400-api/examples/: mai-test.rs
apis/mai400-api/src/: invalid-mai400.rs  invalid-messages.rs  invalid-serial_comm.rs  lib.rs  macros.rs  mai400.rs  messages.rs  serial_comm.rs
apis/novatel-oem6-api/: Cargo.toml  README.md
apis/novatel-oem6-api/examples/: gps-test.rs
apis/novatel-oem6-api/src/: crc32.rs  lib.rs  oem6.rs  serial_comm.rs
apis/system-api/: Cargo.toml  README.md
apis/system-api/src/: config.rs  lib.rs  logger.rs  uboot.rs
apis/system-api/tests/: test_boot_vars.rs  test_config.rs
apis/telemetry-db-api/: Cargo.toml  README.md
apis/telemetry-db-api/src/: lib.rs  models.rs
apps/obc-hs/: Cargo.toml  README.rst  manifest.toml
apps/obc-hs/src/: check_fs.rs  check_mem.rs  check_reset.rs  clean_db.rs  main.rs  ping.rs
clients/uart-comms-client/: Cargo.toml  README.md
clients/uart-comms-client/src/: comms.rs  kiss.rs  main.rs
examples/python-service/: README.rst  config.toml  config.yml  pyproject.toml  requirements.txt  service.py
examples/python-service/service/: app.py  models.py  schema.py
examples/serial-comms-service/: Cargo.toml  README.md
examples/serial-comms-service/src/: comms.rs  graphql.rs  kiss.rs  main.rs  model.rs  schema.rs
examples/uart-comms-service/: Cargo.toml  config.toml
examples/uart-comms-service/src/: comms.rs  main.rs
libcsp/: .clang-format  CMakeLists.txt  module.json  waf  wscript
libcsp/doc/: interfaces.md  protocolstack.rst
libcsp/docs/: Doxyfile  DoxygenLayout.xml  main.md  overview.md
libcsp/include/csp/: csp.h  csp_buffer.h  csp_cmp.h  csp_crc32.h  csp_debug.h  (+4 more)
libcsp/source/: CMakeLists.txt  csp_conn.c  csp_conn.h  csp_io.c  csp_port.c  csp_qfifo.c  csp_qfifo.h  csp_service_handler.c
libcsp/src/: CMakeLists.txt  csp_buffer.c  csp_conn.c  csp_qfifo.c  csp_route.c  csp_route.h
libcsp/test/: csp_if_socket_client.c  csp_if_socket_packet.c  csp_if_socket_server.c
libcsp/utils/: cfpsplit.py  cspsplit.py
libs/channel-protocol/: Cargo.toml  README.md
libs/comms-service/: Cargo.toml  README.md
libs/ground-comms-service/: Cargo.toml
libs/kubos-comms/: Cargo.toml
libs/kubos-service/: README.md  optional-requirements.txt  pyproject.toml  requirements.txt  setup.py
source/: CMakeLists.txt  I2C.c  PeripheralPins.c  cmsis_nvic.c  cubef4.c  gpio.c  hal_tick.c  i2c.c  k_alloc_malloc.c  main.c  sdio.c  spi.c  stm32f4xx_hal.c  stm32f4xx_hal_cortex.c  stm32f4xx_hal_pwr.c  stubs.c  suppress-warnings.cmake  syscalls.c  system_stm32f4xx.c  uart.c  unity.c
source/arch/: k_alloc_csp.c  k_alloc_malloc.c
source/bootstrap_armcc/: startup_stm32f407xx.s
source/bootstrap_gcc/: startup_stm32f407xx.s
source/libc/: putchar.c  strnlen.c
source/unity/: unity.c
tools/: build.py  ci_c.py  default_config.toml  gen_manifest.py  gen_tag_manifest.py  gendocs.py  gendocs.sh  kubos_build.py  kubos_link.py  kubos_verify.sh  local_config.toml  pyproject.toml  rustbuild.sh  rustclippy.sh  show_changes.py  utils.py  yotta_link.py
tools/ci/: c_build.py  lint-projects.json  lint.py  projects.json  rust_test.sh
tools/docs/: deploy_docs.sh  gendocs.py  prep_docs.sh  requirements.txt
tools/images/: Dockerfile.build  build_images.sh
(+2224 files in other folders)
