[workspace]
members = [
"apis/app-api/rust",
"apis/adcs-api",
"apis/clyde-3g-eps-api",
"apis/eps-api",
"apis/isis-ants-api",
"apis/isis-imtq-api",
"apis/isis-iobc-supervisor",
"apis/mai400-api",
"apis/novatel-oem6-api",
"apis/nsl-duplex-d2",
"apis/rust-radio-api",
"apis/system-api",
"apis/telemetry-db-api",
"clients/kubos-file-client",
"clients/kubos-shell-client",
"clients/uart-comms-client",
"examples/rust-c-service/extern-lib",
"examples/rust-c-service/service",
"examples/rust-mission-app",
"examples/rust-service",
"examples/serial-comms-service",
"examples/udp-service-client",
"hal/rust-hal/rust-i2c",
"hal/rust-hal/rust-uart",
"kubos-build-helper",
"libs/cbor-protocol",
"libs/channel-protocol",
"libs/comms-service",
"libs/ground-comms-service",
"libs/file-protocol",
"libs/shell-protocol",
"services/app-service",
"services/clyde-3g-eps-service",
"services/monitor-service",
"services/ethernet-service",
"services/file-service",
"services/kubos-service",
"services/iobc-supervisor-service",
"services/isis-ants-service",
"services/mai400-service",
"services/nsl-duplex-d2-comms-service",
"services/nsl-duplex-ground-service",
"services/novatel-oem6-service",
"services/shell-service",
"services/telemetry-service",
"test/benchmark/db-test",
"test/integration/linux/isis-ants",
"test/integration/linux/mai400",
"test/integration/large_download",
"test/integration/large_upload",
"utils"
]

[profile.release]
lto = true
opt-level = 3
panic = "abort"
