[workspace]
# This contains just pure Rust crates to allow for running
# cargo commands without C-build dependencies
default-members = [
"apis/app-api/rust",
"apis/adcs-api",
"apis/clyde-3g-eps-api",
"apis/eps-api",
"apis/mai400-api",
"apis/novatel-oem6-api",
"apis/nsl-duplex-d2",
"apps/obc-hs",
"apis/rust-radio-api",
"apis/system-api",
"apis/telemetry-db-api",
"clients/kubos-file-client",
"clients/kubos-shell-client",
"clients/uart-comms-client",
"examples/rust-mission-app",
"examples/rust-service",
"examples/serial-comms-service",
"examples/udp-service-client",
"hal/rust-hal/rust-i2c",
"hal/rust-hal/rust-uart",
"kubos-build-helper",
"libs/cbor-protocol",
"libs/channel-protocol",
"libs/comms-service",
"libs/file-protocol",
"libs/shell-protocol",
"services/app-service",
"services/gomspace-p31u-service",
"services/clyde-3g-eps-service",
"services/monitor-service",
"services/file-service",
"services/kubos-service",
"services/local-comms-service",
"services/mai400-service",
"services/nsl-duplex-d2-comms-service",
"services/novatel-oem6-service",
"services/scheduler-service",
"services/shell-service",
"services/telemetry-service",
"test/benchmark/db-test",
"test/integration/linux/mai400",
"test/integration/large_download",
"test/integration/large_upload",
"utils"
]

# This *must* contain all crates in this workspace
members=[
# Pure Rust crates
"apis/app-api/rust",
"apis/adcs-api",
"apis/clyde-3g-eps-api",
"apis/eps-api",
"apis/mai400-api",
"apis/novatel-oem6-api",
"apps/obc-hs",
"apis/nsl-duplex-d2",
"apis/rust-radio-api",
"apis/system-api",
"apis/telemetry-db-api",
"clients/kubos-file-client",
"clients/kubos-shell-client",
"clients/uart-comms-client",
"examples/rust-mission-app",
"examples/rust-service",
"examples/serial-comms-service",
"examples/udp-service-client",
"hal/rust-hal/rust-i2c",
"hal/rust-hal/rust-uart",
"kubos-build-helper",
"libs/cbor-protocol",
"libs/channel-protocol",
"libs/comms-service",
"libs/file-protocol",
"libs/shell-protocol",
"services/app-service",
"services/gomspace-p31u-service",
"services/clyde-3g-eps-service",
"services/monitor-service",
"services/file-service",
"services/kubos-service",
"services/local-comms-service",
"services/mai400-service",
"services/nsl-duplex-d2-comms-service",
"services/novatel-oem6-service",
"services/scheduler-service",
"services/shell-service",
"services/telemetry-service",
"test/benchmark/db-test",
"test/integration/linux/mai400",
"test/integration/large_download",
"test/integration/large_upload",
"utils",
# Rust + C crates
"apis/isis-ants-api",
"apis/isis-imtq-api",
"apis/isis-iobc-supervisor",
"apis/gomspace-p31u-api",
"examples/rust-c-service/extern-lib",
"examples/rust-c-service/service",
"services/iobc-supervisor-service",
"services/isis-ants-service",
"test/integration/linux/isis-ants"
]

exclude = [
"apis/nosengine-rust",
"test/integration/nosengine-rust"
]

[profile.release]
lto = true
opt-level = 1
panic = "abort"
codegen-units = 1

[profile.dev]
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
#lto = true
opt-level = 0
panic = "abort"
#codegen-units = 1

#[patch.crates-io]
# nix = { path = "../nix" }
# libc = { path = "../libc" }
#backtrace = { path = "../backtrace-rs" }
#mio = { path = "../mio" }
#filetime = { path = "../filetime" }
