[tool.poetry]
name = "kubos-tools"
version = "0.1"
description = ""
authors = ["Marshall Culpepper <marshall@xplore.com>"]
license = "Apache Public License v2"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
sphinxcontrib-plantuml = "^0.24"
semantic-version = "^2.10.0"
breathe = "^4.34.0"
kubos = { path = "../libs/kubos/", develop = true }
kubos-service = { path = "../libs/kubos-service", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
