[package]
name = "kubos-app"
version = "0.1.0"
authors = ["Marshall Culpepper <marshall@kubos.com>"]

[dependencies]
getopts = "0.2"
juniper =  "0.9.2"
kubos-service = { path = "../../services/kubos-service" }
kubos-system = { path = "../system-api" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.4"
uuid = { version = "0.6", features = ["v4"] }
