[package]
name = "clyde-3g-eps-api"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
eps-api = { path = "../eps-api" }
failure = "0.1.2"
nom = "4.0"
rust-i2c = { path = "../../hal/rust-hal/rust-i2c" }

[package.metadata.release]
release = false
