[package]
name = "gomspace-p31u-api"
version = "0.1.0"
authors = ["Xueliang"]
build = "build.rs"
edition = "2018"

[dependencies]
failure = "0.1.2"
juniper =  "0.11" 

[build-dependencies]
kubos-build-helper = { path = "../../kubos-build-helper" }

[package.metadata.release]
release = false
