[package]
name = "isis_imtq_api"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co", "Ryan Plauche <ryan@kubos.co>"]

[dependencies]
adcs_api = { path = "../adcs_api" }

[dev-dependencies]
double = "0.2.2"

[build-dependencies]
kubos-build-helper = {path = "../../kubos-build-helper"}
