[package]
name = "mai400-api"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co>"]
license = "Apache-2.0"
repository = "https://github.com/kubos/kubos"
edition = "2018"

[dependencies]
bincode = "= 1.0.0"
bitflags = "= 1.0"
byteorder = "= 1.2"
crc16 = "= 0.3.4"
failure = "= 0.1.5"
nom = "= 4.2.3"
rust-uart = { path = "../../hal/rust-hal/rust-uart" }
serial = "= 0.4"


[build-dependencies]
kubos-build-helper = {path = "../../kubos-build-helper"}
