[package]
name = "novatel-oem6-api"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co>"]
edition = "2018"

[features]
nos3 = ["rust-uart/nos3"]

[dependencies]
bitflags = "1.0"
byteorder = "1.2"
failure = "0.1.2"
nom = "4.0.0-beta1"
rust-uart = { path = "../../hal/rust-hal/rust-uart" }
serial = "0.4"

[package.metadata.release]
release = false
