[package]
name = "kubos-system"
version = "0.1.0"
authors = ["Marshall Culpepper <marshall@kubos.com>"]

[dependencies]
failure = { git = "https://github.com/rust-lang-nursery/failure", version = "1.0"  }
getopts = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"

[dev-dependencies]
tempfile = "3"
