[package]
name = "kubos-system"
authors = ["Marshall Culpepper <marshall@xplore.com>"]
edition = "2018"
version.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
failure = "0.1.2"
log4rs = "0.8.3"
log4rs-syslog = "3.0"
log = "^0.4.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"

[dev-dependencies]
tempfile = "3"
