[package]
name = "obc-hs"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co>"]
edition = "2018"

[dependencies]
failure = "0.1.2"
kubos-app = { path = "../../apis/app-api/rust" }
log = "^0.4.0"
serde_json = "1.0"
toml = "0.4"
time = "0.1"

[package.metadata.release]
release = false
