[package]
name = "uart-comms-client"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co>"]
edition = "2018"

[dependencies]
byteorder = "1.2.7"
clap = "2.32"
comms-service = { path = "../../libs/comms-service" }
failure = "0.1.2"
pnet = "0.23.0"
serde_json = "1.0"
serial = "0.4"
