[package]
name = "serial-comms-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.com>"]
edition = "2018"

[dependencies]
comms-service = { path = "../../libs/comms-service" }
failure = "0.1.3"
juniper =  "0.11"
kubos-system = { path = "../../apis/system-api" }
kubos-service = { path = "../../services/kubos-service" }
log = "^0.4.0"
rust-uart = { path = "../../hal/rust-hal/rust-uart" }
serial = "0.4"
