[package]
name = "comms-service"
version = "0.1.0"
authors = ["William Greer <wgreer184@gmail.com>", "Sam Justice <sam.justice1@gmail.com"]
edition = "2018"

[dependencies]
byteorder = "1.2.7"
failure = "0.1.3"
juniper =  "0.9.2"
kubos-system = { path = "../../apis/system-api" }
log = "^0.4.0"
pnet = "0.23.0"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4.10"

[dev-dependencies]
bytes = "*"
tempfile = "3.0"
utils = { path = "../../utils" }
warp = "0.1.12"
