[package]
name = "ground-comms-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.com>"]
edition = "2018"

[dependencies]
failure = "0.1.3"
pnet = "0.22.0"
juniper =  "0.9.2"
byteorder = "1.2.7"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4.10"
log = "^0.4.0"
kubos-system = { path = "../../apis/system-api" }
reqwest = "0.9"
