[package]
name = "kubos-comms"
authors = ["Josh Roppo <joshua.roppo@xplore.com>", "William Greer <wgreer184@gmail.com>", "Sam Justice <sam.justice1@gmail.com"]
edition = "2018"
version.workspace = true

[dependencies]
byteorder = "1.2.7"
failure = "0.1.3"
juniper =  "0.11.1"
kubos-system = { version = "=1.23.0", path = "../../apis/system-api" }
log = "^0.4.0"
pnet = "0.31.0"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4.10"

[dev-dependencies]
bytes = "*"
tempfile = "3.0"
utils = { path = "../../utils" }
warp = "0.1.12"
